[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "animadualkvstyle"
version = "0.0.2"
description = "Custom node to load custom anima lora"
authors = [
  {name = "TD", email = "minhduck3359@gmail.com"}
]
readme = "README.md"
license = {text = "GNU General Public License v3"}
requires-python = ">=3.10"
classifiers = []
dependencies = [

]



[project.optional-dependencies]
dev = [
    "bump-my-version",
    "mypy",  # linting
    "pre-commit", # runs linting on commit
    "ruff",  # linting
]

[project.urls]
Repository = "https://github.com/TheDucker1/animadualkvstyle"
BugTracker = "https://github.com/TheDucker1/animadualkvstyle/issues"
Documentation = "https://github.com/TheDucker1/animadualkvstyle/wiki"


[tool.comfy]
PublisherId = "ttddrr11"
DisplayName = "AnimaDualKVStyle"
Icon = ""
Tags = []
Repository = "https://github.com/TheDucker1/animadualkvstyle"

includes = []

[tool.setuptools.package-data]
"*" = ["*.*"]



[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[tool.ruff]
# extend-exclude = ["static", "ci/templates"]
line-length = 140
src = ["src"]
target-version = "py39"

# Add rules to ban exec/eval
[tool.ruff.lint]
select = [
    "S102",  # exec-builtin
    "S307",  # eval-used
    "W293",
    "F",  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
    # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
